ui: fixed post image height and right side bar spacing

--- a/react_ui/src/components/post/PostDetail.css
+++ b/react_ui/src/components/post/PostDetail.css
@@ -21,12 +21,14 @@
 }
 
 .post-detail-image {
-  width: 100%;
+  /* width: 100%; */
   height: auto;
   max-height: 250px;
   object-fit: cover;
   border-radius: 0.5rem;
-  border: 2px solid #facc15;
+  box-shadow: 0 0px 8px rgba(0, 0, 0, 0.3);
+
+  /* border: 2px solid #facc15; */
 }
 
 .post-detail-content {
